<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".fragments.WalletFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back_img"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_11sdp"
                    android:text="@string/menu_my_wallet"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/redeem_bg"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_availiable_points"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/_3sdp"
                        android:src="@drawable/coin" />

                    <TextView
                        android:id="@+id/points_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10000000"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/minimum_redeem_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minimum_redeem_points"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coins_to_currency"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coins_to_uscurrency"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/pay_lyt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/bg">

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:elevation="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/select_method"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radio_paytm"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false" />

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_30sdp"
                                android:layout_gravity="center"
                                android:src="@drawable/paytm_logo" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radio_paypal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true" />

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_30sdp"
                                android:layout_gravity="center"
                                android:src="@drawable/paypal_logo" />
                        </LinearLayout>



                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radio_upi"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false" />

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_30sdp"
                                android:layout_gravity="center"
                                android:src="@drawable/upi" />
                        </LinearLayout>


                    </RadioGroup>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/pay_lyt">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:elevation="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/enter_payment_details"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:visibility="gone"
                        app:counterTextColor="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name_edit_text_redeem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_name"
                            android:inputType="textPersonName"
                            android:textColor="@color/black"
                            android:focusable="false"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:textColorHint="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/redeem_number_lyt"
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:visibility="gone"
                        app:counterTextColor="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/number_edit_text_redeem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Enter Paytm Number"
                            android:inputType="phone"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/redeem_email_lyt"
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:visibility="visible"
                        app:counterTextColor="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_edit_text_redeem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Enter Paypal Id"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_4sdp"
                        app:counterTextColor="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/points_edit_text_redeem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_points"
                            android:inputType="number"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/redeem_btn"
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:background="@drawable/btn_bg"
                        android:gravity="center"
                        android:text="@string/submit"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </RelativeLayout>
</ScrollView>